--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.1'
+    compileSdkVersion 33
+        buildToolsVersion "33.0.2"
+
     defaultConfig {
         applicationId "dmc.mediapickerpoject"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -17,15 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+     lintOptions {
+            abortOnError false
+        }
+
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile project(':mediapicker')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+//     compile 'com.android.support:support-annotations:26.0.2'
+//     compile 'com.android.support:support-v4:25.3.1'
+//     compile 'com.android.support:support-compat:28.0.0'
+//     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+//         exclude group: 'com.android.support', module: 'support-annotations'
+//     })
+//     compile 'androidx.appcompat:appcompat:1.0.2'
+//     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation project(':mediapicker')
 }
